--- a/src/App.scss
+++ b/src/App.scss
@@ -84,7 +84,7 @@ section {
   transition: transform 2s;
 
   .header_clickable {
-    margin-left: 0;
+    //margin-left: 0;
     margin-left: 1em;
     width: 4.5em;
     height: 4.5em;
@@ -115,19 +115,48 @@ section {
 }
  */
 pre {
-  text-align: left;
-
   margin: 0 auto;
   padding: 1.2rem;
-  font-family: monospace;
-  font-size: 2rem;
-  color: greenyellow;
-  white-space: pre-wrap;
   overflow-x: auto;
-  //display: flex;
-  //width: 10;
+  width: 100%;
+  text-align: left;
+  white-space: pre-wrap;
+  font-family: "Courier New", Courier, monospace, sans-serif;
+  font-size: 1.25rem;
+  color: greenyellow;
 }
 
-/* section[pathname="skills"] .sec__desc pre {
-  width: 75vw;
-} */
+@media screen and (max-width: 1100px) {
+  pre {
+    width: 80%;
+    padding: 0.5em;
+    word-break: break-all;
+  }
+  .scroll__effect {
+    flex-direction: row;
+    bottom: 0;
+    top: unset;
+    //margin-left: 0;
+    margin: 0 auto;
+    //top: 0;
+    //top: 0%;
+  }
+  .sec__desc {
+    width: 94%;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  pre {
+    width: 94%;
+    word-break: break-all;
+  }
+  .sec__desc {
+    width: 94%;
+  }
+}
+@media screen and (max-width: 660px) {
+  .sec__desc {
+    margin-bottom: 5em;
+  }
+}
