--- a/src/App.scss
+++ b/src/App.scss
@@ -24,7 +24,8 @@ section {
     background-image: url("./assets/170.jpg");
   }
   &:nth-of-type(2) {
-    background-image: url("./assets/workplace.jpg");
+    //background-image: url("./assets/workplace.jpg");
+    background: linear-gradient(45deg, darkorange, darkred);
   }
   &:nth-of-type(3) {
     background-image: url("./assets/coffee.jpg");
